# ThermalORB

./: LICENSE  README.md
ORB_SLAM3/: .gitignore  CMakeLists.txt
ORB_SLAM3/Examples/Monocular/: mono_euroc.cc
ORB_SLAM3/Thermal_ORB/: CMakeLists.txt  imageProcess.cc
ORB_SLAM3/include/: Frame.h  ORBmatcher.h  SuperPointExtractor.h  System.h  Tracking.h
ORB_SLAM3/src/: Frame.cc  ORBmatcher.cc  SuperPointExtractor.cc  System.cc  Tracking.cc  Viewer.cc
Thermal_ORB/: CMakeLists.txt  imageProcess.cc
pytorch-superpoint/: export.py
pytorch-superpoint/logs/test_results/: config.yml
pytorch-superpoint/models/: model_wrap.py
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_08:57:24/: events.out.tfevents.1615211844.msaraceno-desktop
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_08:58:37/: events.out.tfevents.1615211917.msaraceno-desktop
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_10:21:21/: events.out.tfevents.1615216881.msaraceno-desktop
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_10:26:22/: events.out.tfevents.1615217182.msaraceno-desktop
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_10:31:11/: events.out.tfevents.1615217471.msaraceno-desktop
pytorch-superpoint/runs/export_detector_homoAdapt/magicpoint_synth_homoAdapt_coco_2021-03-08_12:39:56/: events.out.tfevents.1615225196.msaraceno-desktop
(+6022 files in other folders)
